fix overflow on left contain on contract page

--- a/client/src/components/Navbar/Navbar.css
+++ b/client/src/components/Navbar/Navbar.css
@@ -1,5 +1,9 @@
 /* components/Navbar/Navbar.CSS */
 
+nav {
+  background-color: #222;
+}
+
 ._Navbar {
   position: relative;  
 }
