--- a/client/src/pages/Contact/Contact.css
+++ b/client/src/pages/Contact/Contact.css
@@ -25,8 +25,8 @@
 }
 
 ._Contact .intro-picture img {
-  height: 150px;
-  width: 150px;
+  height: 100px;
+  width: 100px;
 }
 
 ._Contact .intro-body {
@@ -39,22 +39,26 @@
 }
 
 ._Contact .right-container {
-  background: rgba(51, 51, 51, 0.75);  
-	background-size: 100% 100%;
+  background: rgba(51, 51, 51, 0.75);
+  background-size: 100% 100%;
+}
+
+._Contact .left-container {
+  overflow: auto;
 }
 
 ._Contact .form-container {
   position: relative;
-	max-height: 100%;
-	width: 100%;  
-	overflow: auto;
+  max-height: 100%;
+  width: 100%;
+  overflow: auto;
 }
 
 ._Contact .form-wrapper {
-	position: relative;
-	max-height: 100%;
-	width: 100%;
-	padding: 20px;	
+  position: relative;
+  max-height: 100%;
+  width: 100%;
+  padding: 20px;
 }
 
 ._Contact .form-header {
@@ -70,4 +74,11 @@
   {
   width: 100%;
   height: 100%;
+}
+
+@media only screen and (min-height: 750px) {
+  ._Contact .intro-picture img {
+    height: 150px;
+    width: 150px;
+  }
 }
